@@ -345,7 +345,9 @@ Other Changes
 * SOLR-1865: SolrResourceLoader.getLines ignores Byte Order Markers (BOMs) at the
   beginning of input files, these are often created by editors such as Windows
   Notepad.  (rmuir, hossman)
-  
+
+* SOLR-1938: ElisionFilterFactory will use a default set of French contractions
+  if you do not supply a custom articles file.  (rmuir)  
   
 Build
 ----------------------
